0407 talk to sisiter

--- a/PMP.ini
+++ b/PMP.ini
@@ -15,6 +15,74 @@ plan 3カ月
     7月末：受験・合格
         勉強開始からちょうど3カ月で合格
 
+流れ
+    1. どんな試験なのか調べる
+        35PDU
+    2. 受験に向けて勉強を開始する
+        book
+            プロジェクトマネジメント基礎 PMBOK入門」
+            「PMP合格虎の巻」
+            「PMBOK入門」を
+        講座
+            PMP受験資格を満たす35PDUが取得できるeラーニングに申し込みました。Net Learningという会社の「PMBOK基本講座」というコース
+    3. 受験に必要な研修を受講する
 
-1. どんな試験なのか調べる
-    35PDU
+    4. 問題集を使った実践的な学習をする
+        「合格虎の巻」に着手しました。通勤時間と週末を使って、8日間で一通り全部の問題を解き終わりました。
+        　初見で問題をといた結果、全部の章末問題の正答率はわずか40%でした。
+        ひたすら「合格虎の巻」の復習です。
+
+    5. 勉強を中断して受験申請に忙殺される
+        2015年1月7日…PMP試験の受験申請
+        4500時間分のプロジェクト経歴書を英文で作成し、受験申請書を作成
+        予め経歴を箇条書きにしていたものの、入力から提出まで、まる1日
+        2015年1月13日…無事PMPの受験申請書が受理されたという連絡を受けたので、
+        試験の受験日を2015年1月27日(月)と決めて、会場に予約を入れました。
+COST 
+    トータルでかかった勉強時間は150-200時間と
+    受験料を除くと8万円程度でした。
+        eラーニング受講に4万円程度、
+        参考書や勉強ツール購入に2万円程度、
+        ファミレスやカフェで2万円
+
+
+第7版で「5つのプロセス」から「12の原則」へ
+    PMBOKでは、これまでの第6版ではプロジェクトのスタートから終結までのプロセスを「1.立ち上げ」→「2.計画」→「3.実行」→「4.監視・コントロール」→「5.終結」の5つのプロセスに分割して定義していましたが、2021年の改定で「12の原則」に変更されました。 
+
+    「12の原則」とは、
+
+        ・スチュワードシップ : 請け負ったことを責任を持って行う
+        ・お互いを尊重し協力し合うチーム
+        ・ステークホルダー（利害関係者）との連携
+        ・価値の創造に焦点を当てる
+        ・包括的思考：システムの相互作用を認識して対応する
+        ・リーダーシップ
+        ・テーラリング：状況に応じた調整（仕立て直し）を図る
+        ・品質をプロセスと結果に組み込む
+        ・事態の複雑さに対処、適応する
+        ・リスク（好機と脅威の不確実性）に対処する
+        ・適応性と回復力を備える
+        ・変化することであるべき未来を達成する
+    
+    8のパフォーマンス・ドメイン」
+        ​・Stakeholders（利害関係者）
+        ・Team（チーム）
+        ・Development Approach and Life cycle（開発アプローチとライフサイクル）
+        ・Planning（計画）
+        ・Project work（プロジェクト作業）
+        ・Delivery（提供・納品）
+        ・Measurement（測定）
+        ・Uncertainty（曖昧さ・複雑さ・変動性などの不確実性への対処）
+
+why you bought Udemy
+    
+    ref
+        https://xtech.tv/archives/190
+    Udemy
+        PMP Certification Exam Prep 35 PDU Project Management Course
+
+    それを24,000円で済ませる方法があります。それがオンライン学習サービス『Udemy』のPMP資格取得対策講座『PMP Exam Prep Project Management Professional Certification』です。すべて受講すると、受験資格の35PDUが取得可能です。受験資格の35PDUを自己負担する人で、かつ安く取得したい人には非常におすすめです。私も2021年新試験でアジャイル開発が追加されたことを機にこの動画を購入しましたが、非常におすすめできる内容でした。
+
+     なお、Udemyのコースを修了すると、修了証明書をダウンロードすることが可能になります。ダウンロードの手順は『ブラウザーで修了証明書をダウンロードする方法』をご参照ください。
+PMI membership
+    https://www.pmi.org/membership
